feat: finalize first develpment working version
